Refactor: 알림 재시도 백오프 계산 명확화